[gd_scene load_steps=28 format=3 uid="uid://bhcfdmwutyxgt"]

[ext_resource type="Script" uid="uid://bm6y53h83xn4e" path="res://Scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://beior1iea0wmg" path="res://Sprites/Azrael/azrael_parado.png" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://odufgm8aeqwn" path="res://Sprites/Azrael/azrael_caminando.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://cvwtikag3lsj8" path="res://Sprites/Azrael/death_azrael.png" id="3_tuyoq"]
[ext_resource type="Texture2D" uid="uid://i11j23etnxay" path="res://Sprites/Azrael/azrael_salta.png" id="5_fjrip"]
[ext_resource type="Texture2D" uid="uid://dhb1f4hxc7w3p" path="res://Sprites/Azrael/azrael_sentado_2.png" id="6_d2wvv"]
[ext_resource type="AudioStream" uid="uid://cklg0bcg5vsd8" path="res://music/fx/SFX_Jump_07.wav" id="6_fjrip"]
[ext_resource type="AudioStream" uid="uid://cblw1ubroimfu" path="res://music/fx/SFX_fall_09.wav" id="7_smehm"]
[ext_resource type="AudioStream" uid="uid://p4sskq4ewo55" path="res://music/fx/hurt.wav" id="8_smehm"]
[ext_resource type="AudioStream" uid="uid://b45rwgy1k27ou" path="res://music/fx/hit_block_break_1.wav" id="9_ur7pv"]
[ext_resource type="AudioStream" uid="uid://dcsdbj40l0onx" path="res://music/fx/game over retro sound foley.mp3" id="10_y4r1p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_qlg0r")
region = Rect2(0, 0, 64, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_qlg0r")
region = Rect2(64, 0, 64, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_tuyoq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("5_fjrip")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("5_fjrip")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("5_fjrip")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("6_d2wvv")
region = Rect2(0, 0, 29, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("6_d2wvv")
region = Rect2(29, 0, 29, 43)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.9,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"camina",
"speed": 7.0
}, {
"frames": [{
"duration": 1.9,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.9,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": false,
"name": &"salta",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}],
"loop": true,
"name": &"sentado",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 12.0
height = 46.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qlg0r"]
a = Vector2(17, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_d2wvv"]
radius = 31.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
platform_floor_layers = 4294967044
platform_wall_layers = 4
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(30, -34)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"hide"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(31, -30)
shape = SubResource("CapsuleShape2D_fjrip")

[node name="hitPoint" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitPoint"]
position = Vector2(23, -15)
shape = SubResource("SegmentShape2D_qlg0r")

[node name="Audio" type="Node" parent="."]

[node name="salto" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2(8, 274)
stream = ExtResource("6_fjrip")

[node name="caida" type="AudioStreamPlayer2D" parent="Audio"]
position = Vector2(8, 274)
stream = ExtResource("7_smehm")

[node name="hit" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("8_smehm")

[node name="damage" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_ur7pv")

[node name="damage_boss" type="AudioStreamPlayer2D" parent="Audio"]

[node name="game_over" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_y4r1p")

[node name="action" type="Area2D" parent="."]
position = Vector2(30, -33)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="action"]
shape = SubResource("CircleShape2D_d2wvv")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="hitPoint" to="." method="_on_hit_point_body_entered"]
[connection signal="body_entered" from="hitPoint" to="." method="_on_hit_point_body_entered"]
